--- a/package.json
+++ b/package.json
@@ -4,28 +4,62 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.5.3",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.89.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "firebase": "^12.2.1",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.13",
+    "next": "^15.5.2",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.92.1"
+    "react-element-to-jsx-string": "^17.0.1",
+    "react-hook-form": "^7.63.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
+    "react-international-phone": "^4.6.0",
+    "react-phone-number-input": "^3.4.12",
+    "sas": "^3.0.4",
+    "sass": "^1.89.2",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.179.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^3.4.17",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
