--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@talkjs/react": "^0.1.11",
     "@tanstack/react-query": "^5.89.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -29,7 +31,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
     "next": "^15.5.2",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.11",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.7",
@@ -46,6 +48,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "talkjs": "^0.41.1",
     "three": "^0.167.1",
     "zod": "^4.1.11"
   },
