--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -31,7 +32,6 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
     "next": "^15.5.2",
-    "next-auth": "4.24.11",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.7",
