--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.1.1",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
+    "ldrs": "^1.1.9",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
     "next": "^15.5.2",
@@ -50,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7",
     "talkjs": "^0.41.1",
     "three": "^0.167.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
