--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-international-phone": "^4.6.0",
+    "react-intersection-observer": "^10.0.0",
     "react-phone-number-input": "^3.4.12",
     "sas": "^3.0.4",
     "sass": "^1.89.2",
