--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@talkjs/react": "^0.1.11",
     "@tanstack/react-query": "^5.89.0",
     "class-variance-authority": "^0.7.1",
+    "claude": "^0.1.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "firebase": "^12.2.1",
