--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ldrs": "^1.1.9",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
-    "next": "16.1.0-canary.17",
+    "next": "^16.1.0-canary.20",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.7",
