--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "claude": "^0.1.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "ldrs": "^1.1.9",
