--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
     "ldrs": "^1.1.9",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
