--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@talkjs/react": "^0.1.11",
     "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "class-variance-authority": "^0.7.1",
     "claude": "^0.1.1",
     "clsx": "^2.1.1",
