--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
-    "js-cookie": "^3.0.5",
     "ldrs": "^1.1.9",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.13",
-    "next": "^16.1.0-canary.20",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.7",
@@ -62,21 +61,18 @@
     "tailwindcss-animate": "^1.0.7",
     "talkjs": "^0.41.1",
     "three": "^0.167.1",
-    "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@eslint/eslintrc": "^0.1.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.179.0",
-    "autoprefixer": "^10.4.21",
-    "depcheck": "^1.4.7",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "postcss": "^8.5.6",
