--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
             cd /var/www/urbancare
-            git pull origin main
+            git pull
             npm ci
             npm run build
             pm2 restart urbancare
