--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
           key: ${{ secrets.HETZNER_SSH_KEY }}
           script: |
             cd /var/www/urbancare
-            git pull
+            git fetch origin
+            git reset --hard origin/main
             npm ci
             npm run build
             pm2 restart urbancare
