deployment file changed added secret

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           host: ${{ secrets.HETZNER_HOST }}
           username: ${{ secrets.HETZNER_USER }}
           key: ${{ secrets.HETZNER_SSH_KEY }}
+          passphrase: : ${{ secrets.HETZNER_PASSPHRASE }}
           script: |
             cd /var/www/urbancare
             git fetch origin
